examples/basic-slb/ws.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: cyan
spec:
  selector:
    matchLabels:
      app: webserver
  replicas: 3
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
          readOnly: true
          name: ws-index-file
        - mountPath: /etc/nginx/conf.d/
          readOnly: true
          name: ws-conf-file
      volumes:
      - name: ws-index-file
        configMap:
          name: ws-index-file
          items:
          - key: index.html
            path: index.html
      - name: ws-conf-file
        configMap:
          name: ws-conf-file
          items:
          - key: ws.conf
            path: ws.conf
